--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,12 @@ huggingface-hub = "^0.27.1"
 kagglehub = "^0.3.9"
 uvicorn = "^0.34.0"
 fastapi = "^0.115.8"
+matplotlib = "^3.10.1"
+python-multipart = "^0.0.20"
+pymongo = {extras = ["srv"], version = "^4.11.2"}
+motor = "^3.7.0"
+ffmpeg = "^1.4"
+pydub = "^0.25.1"
 
 
 [build-system]
