--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-speechbrain>=1.0.2,<2.0.0
-torchaudio>=2.5.1,<3.0.0
-soundfile>=0.12.1,<0.13.0
-torch>=2.5.1,<3.0.0
-tqdm>=4.67.1,<5.0.0
-scikit-learn>=1.6.0,<2.0.0
-transformers[torch]>=4.47.1,<5.0.0
-datasets>=3.2.0,<4.0.0
-jiwer>=3.0.5,<4.0.0
-python-dotenv>=1.0.1,<2.0.0
-huggingface-hub>=0.27.1,<0.28.0
-kagglehub>=0.3.9,<0.4.0
-uvicorn>=0.34.0
 fastapi>=0.115.8
+uvicorn[standard]>=0.34.0
+python-multipart
+requests
+python-dotenv>=1.0.0
+pymongo>=4.3.3
+pydantic>=2.0.0
+motor>=3.3.2
+requests>=2.28.2
+starlette>=0.25.0
+typing-extensions>=4.5.0
