added api key route and modified README

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,19 @@
-HUGGINGFACE_TOKEN=
+# Hugging Face API Token - Required for speech recognition
+# Get yours at: https://huggingface.co/settings/tokens
+HUGGINGFACE_TOKEN=your_huggingface_token_here
+
+# OpenAI API Key - Required for chat functionality
+# Get yours at: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key_here
+
+# ElevenLabs API Key - Required for text-to-speech
+# Get yours at: https://elevenlabs.io/
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+
+# MongoDB Connection String - Required for database functionality
+# Format: mongodb+srv://username:password@cluster.mongodb.net/dbname
+# Create a free MongoDB at https://app.genez.io/dashboard
+MONGODB_URI=your_mongodb_connection_string_here
+
+# MongoDB Database Name
+MONGODB_DB=stt-app-db
